# fastAPI

./: alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2b4e63a820b6_create_products_table.py  878f336384cd_create_products_table.py
api_v1/products/: crud.py  dependancies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
